2016-11-16 Fender menu완성 및 서울아산병원 메인페이지 작업

--- a/fender/fender/css/src/scroll_page_01.css
+++ b/fender/fender/css/src/scroll_page_01.css
@@ -3,10 +3,7 @@
 	#headBox{width: 100%; height: 80px; box-sizing:border-box; position: absolute;z-index:500;top:0; left: 0;}
 	#headBox.fix{position: fixed; top: 0}
 
-	h1{width: 164px; height: 64px;float: left;background-image:url("../../img/fender_logo.png");background-repeat:no-repeat;background-position:center;margin-top:42px;margin-left:64px;transition:all 0.3s;display:none;}
-	h1:hover{transform:scale(1.2);}
-		h1>a{display: block;width:100%; height: 100%;text-align: center; line-height: 2rem;font-size: 2rem;}
-
+	h1{width: 164px; height: 64px;float: left;background-image:url("../../img/fender_logo.png");background-repeat:no-repeat;background-position:center;margin-top:42px;margin-left:64px;display:none;}
 	
 	#menu{width: 60px;	height: 44px;
 		float: right; right: 1rem;
@@ -22,7 +19,7 @@
 
 /*menu_02 ---------------------------*/
 
-	#menu_02{width:60px;height:44px;float:right;margin-top:42px;margin-right:44px;display:none;}
+	#menu_02{width:60px;height:44px;float:right;margin-top:42px;margin-right:64px;display:none;cursor:pointer;background-color:transparent;}
 	#menu_02>ul{width:60px;height:5px;float:left;margin-top:7px;}
 	#menu_02>ul:nth-of-type(1){margin-top:0;}
 	#menu_02>ul>li{background-color:#fff;}
@@ -47,7 +44,7 @@
 
 
 
-	#snb>ul{width:80px;height:200px;position:fixed;z-index:500;right:0;top:50%;margin-top:-100px;}
+	#snb>ul{width:80px;height:200px;position:fixed;z-index:300;right:0;top:50%;margin-top:-100px;}
 	#snb>ul>li{width:10px;height:10px;border-radius:50%;background-color:#fff;margin-top:36px;display:none;}
 	#snb>ul>li:first-child{margin-top:0;}
 	#snb>ul>li:hover{transform:scale(1.4);}
@@ -62,17 +59,24 @@
 
 
 /*#mnb    ----------------------------------------*/
-	#mnb{width:100%;height:calc(100vh);background-color:rgba(0,0,0,0.85);z-index:500;position:fixed;}
+	#mnb{width:100%;height:calc(100vh);background-color:rgba(0,0,0,0.9);z-index:500;position:fixed;display:none;}
 	#mnb>.mnbBox{width:510px;height:600px;margin-top:200px;margin-left:670px;}
 	#mnb>.mnbBox>.mnbLineBox{width:132px;height:520px;}
 		 .mnbBox>div{float:left;}
 		 .mnbTextBox{width:378px;height:520px;}
-		 .mnbUnderBox{width:100%;height:80px;background-color:#ddd;}
+
+	button.close{width:60px;height:60px;position:fixed;top:4%;right:4%;transform:rotate(45deg);transition:all 0.3s;background-color:transparent;}
+	button.close::after{content:"";display:block;width:4px;height:60px;background-color:#fff;position:absolute;left:50%;top:0;z-index:500;margin-left:-2px;}
+	button.close::before{content:"";display:block;width:60px;height:4px;background-color:#fff;position:absolute;top:50%;left:50%;margin-left:-30px;margin-top:-2px;}
+
+
+	
+	button.close:hover{transform:rotate(90deg);}
 
 /*mnbLineBox----------------------------*/
 		 
 		 .mnbLogo{width:84px;height:84px;background-color:#c20c0c;float:left;background-image:url("../../img/F.png");background-repeat:no-repeat;background-position:center;}
-		 .mnbRedLine{width:3px;height:466px;background-color:#c20c0c;float:left;}
+		 .mnbRedLine{width:3px;height:484px;background-color:#c20c0c;float:left;}
 		 
 		 .mnbTextUl{width:inherit;height:inherit;}
 		 .mnbTextUl>li{width:100%;height:100px;background-size:60%;background-repeat:no-repeat;}
@@ -83,14 +87,19 @@
 		 .mnbTextUl>li:nth-of-type(5){background-image:url("../../img/title/menu/contact.png");background-size:80%;}
 
 /*mnbUnderBox* ------------------------------------*/
-
+.mnbUnderBox{width:100%;height:80px;margin-top:30px;}
 .mnbUnderBox>ul{width:inherit;height:inherit;}
-.mnbUnderBox>ul>li{width:80px;height:80px;float:left;border-radius:50%;background-color:#696969;}
-.mnbUnderBox i{color:#fff;text-align:center;}
-.mnbUnderBox>ul>li:nth-of-type(1)>i{font-size:50px;margin-left:10px;}
-.mnbUnderBox>ul>li:nth-of-type(2)>i{font-size:50px;margin-left:10px;}
-.mnbUnderBox>ul>li:nth-of-type(3)>i{font-size:50px;margin-left:10px;}
+.mnbUnderBox>ul>li{width:70px;height:70px;float:left;border-radius:50%;background-color:#696969;cursor:pointer;}
+.mnbUnderBox>ul>li:nth-of-type(1){margin-left:120px;}
+.mnbUnderBox>ul>li:nth-of-type(2),.mnbUnderBox>ul>li:nth-of-type(3){margin-left:38px;}
 
+.mnbUnderBox i{color:#fff;text-align:center;}
+.mnbUnderBox>ul>li{font-size:36px;transition:all 0.7s;}
+.mnbUnderBox>ul>li:nth-of-type(1)>i{margin-left:24px;margin-top:16px;}
+.mnbUnderBox>ul>li:nth-of-type(2)>i{margin-left:20px;margin-top:16px;}
+.mnbUnderBox>ul>li:nth-of-type(3)>i{margin-left:20px;margin-top:14px;}
+
+.mnbUnderBox>ul>li:hover{transform:scale(1.2);background-color:transparent;}
 
 
 	
@@ -101,12 +110,12 @@
 	.mainTitle_02{width:80%;height:80px;background-image:url("../../img/title/telecaster.png");padding-left:20px;margin-left:160px;margin-top:10px;display:none;}
 	.mainTitle_03{height:100px;background-image:url("../../img/title/left_hand.png");margin-top:10px;margin-left:20px;display:none;}
 
-/*mainColor_box*/
+/*mainColor_box------------------------------------*/
 
 	#mainColorBox{width:800px;height:110px;margin-left:220px;}
 	#mainColorBox>div{width:25%;height:inherit;float:left;background-repeat:no-repeat;
 	background-position:center;transition:all 0.5s;
-	display:none;}
+	display:none;cursor:pointer;}
 	#mainColorBox>div:hover{transform:scale(1.2);}
 	#mainColorBox>div:nth-of-type(1){background-image:url("../../img/g_red.png");}
 	#mainColorBox>div:nth-of-type(2){background-image:url("../../img/g_blue.png");}
@@ -152,7 +161,7 @@
 
 /*#scrollDown---------------------------------*/
 
-#scrollDown{width:90px;height:200px;position:fixed;bottom:-10%;left:50%;margin-left:-100px;cursor:pointer;display:none;}
+#scrollDown{width:90px;height:200px;position:fixed;bottom:-10%;left:50%;margin-left:-45px;cursor:pointer;display:none;}
 #scrollDown>span{font-family:
 				'Open Sans', nanumGothic, "돋움",dotum;
 				 animation-name:scrolled;
@@ -162,7 +171,7 @@
 				 animation-iteration-count:infinite}
 
 sans-serif;color:#fff;}
-#scrollDown>ul{width:100%;height:20px;margin-left:8px;}
+#scrollDown>ul{width:100%;height:20px;margin-left:10px;}
 #scrollDown>ul>li{width:33.333334%;
 				  height:20px;
 				  float:left;
