--- a/fender/fender/css/src/base.css
+++ b/fender/fender/css/src/base.css
@@ -1,48 +1,50 @@
 /* base.css */
 
+
+@media screen and (min-width: 960px) and (max-width: 2560px) {
 /* header ----------------------------------------*/
 
 
 .content{width: 100%; height: auto;}
-	#headBox{width: 100%; height: 80px; box-sizing:border-box; position: fixed;z-index:500;top:0; left: 0;}
+	#headBox{width: 100%; height: 4.16666666667vw; box-sizing:border-box; position: fixed;z-index:500;top:0; left: 0;}
 	#headBox.fix{position: fixed; top: 0}
 
-	h1{width: 164px; height: 64px;float: left;background-image:url("../../img/fender_logo.png");background-repeat:no-repeat;background-position:center;margin-top:42px;margin-left:64px;display:none;}
+	h1{width:8.54166667vw; height:64px;float: left;background-image:url("../../img/fender_logo.png");background-size:100%;background-repeat:no-repeat;background-position:center;margin-top:42px;margin-left:3.33333333vw;display:none;}
 
-/*menu_02 ---------------------------*/
+/*menu ---------------------------*/
 
-	#menu{width:60px;height:44px;float:right;margin-top:42px;margin-right:64px;display:none;cursor:pointer;background-color:transparent;}
-	#menu>ul{width:60px;height:5px;float:left;margin-top:7px;}
+	#menu{width:60px;height:44px;float:right;margin-top:42px;margin-right:3.333333333vw;display:none;cursor:pointer;background-color:transparent;}
+	#menu>ul{width:3.125vw;height:0.2604166vw;float:left;margin-top:0.3645833vw;}
 	#menu>ul:nth-of-type(1){margin-top:0;}
 	#menu>ul>li{background-color:#fff;}
-	#menu>ul>li:nth-of-type(1){width:6px;height:6px;float:left;}
-	#menu>ul>li:nth-of-type(2){height:6px;float:left;padding-left:10px;box-sizing:border-box;margin-left:6px;transition:all 0.3s;}
-	#menu>.menuSmall_01>li:nth-of-type(2){width:36px;}
-	#menu>.menuSmall_02>li:nth-of-type(2){width:46px;}
-	#menu>.menuSmall_03>li:nth-of-type(2){width:40px;}
-	#menu>.menuSmall_04>li:nth-of-type(2){width:46px;}
+	#menu>ul>li:nth-of-type(1){width:0.3125vw;height:0.3125vw;float:left;}
+	#menu>ul>li:nth-of-type(2){height:0.3125vw;float:left;padding-left:0.520833vw;box-sizing:border-box;margin-left:0.3125vw;transition:all 0.3s;}
+	#menu>.menuSmall_01>li:nth-of-type(2){width:1.875vw;}
+	#menu>.menuSmall_02>li:nth-of-type(2){width:2.3958333vw;}
+	#menu>.menuSmall_03>li:nth-of-type(2){width:2.0833333vw;}
+	#menu>.menuSmall_04>li:nth-of-type(2){width:2.3958333vw;}
 
-/*menu_02 > hover--------------------------*/
-
-	#menu>.menuSmall_01>li:nth-of-type(1):hover + li{width:46px;}
-	#menu>.menuSmall_02>li:nth-of-type(1):hover + li{width:36px;}
-	#menu>.menuSmall_03>li:nth-of-type(1):hover + li{width:32px;}
-	#menu>.menuSmall_04>li:nth-of-type(1):hover + li{width:30px;}
+/*menu > hover--------------------------*/
+/*
+	#menu>.menuSmall_01>li:nth-of-type(1):hover + li{width:2.3958333vw;}
+	#menu>.menuSmall_02>li:nth-of-type(1):hover + li{width:1.875vw;}
+	#menu>.menuSmall_03>li:nth-of-type(1):hover + li{width:1.66667vw;}
+	#menu>.menuSmall_04>li:nth-of-type(1):hover + li{width:1.5625vw;}
 
 	#menu>.menuSmall_01>li:nth-of-type(2):hover{width:46px;}
 	#menu>.menuSmall_02>li:nth-of-type(2):hover{width:36px;}
 	#menu>.menuSmall_03>li:nth-of-type(2):hover{width:32px;}
-	#menu>.menuSmall_04>li:nth-of-type(2):hover{width:30px;}
+	#menu>.menuSmall_04>li:nth-of-type(2):hover{width:30px;}*/
 /*#mnb    ----------------------------------------*/
-	#mnb{width:100%;height:calc(100vh);background-color:rgba(0,0,0,0.9);z-index:10000;position:fixed;display:none;}
-	#mnb>.mnbBox{width:510px;height:600px;margin-top:200px;margin-left:670px;}
-	#mnb>.mnbBox>.mnbLineBox{width:132px;height:520px;}
+	#mnb{width:100%;height:100%;background-color:rgba(0,0,0,0.9);z-index:10000;position:fixed;display:none;}
+	#mnb>.mnbBox{width:26.5625vw;height:31.25vw;margin-top:-15.625vw;position:absolute;top:50%;left:50%;margin-left:-13.28125vw;}
+	#mnb>.mnbBox>.mnbLineBox{width:6.875vw;height:27.08333333333vw}
 		 .mnbBox>div{float:left;}
-		 .mnbTextBox{width:378px;height:520px;}
+		 .mnbTextBox{width:19.6875vw;height:27.0833333333vw}
 
-	button.close{width:60px;height:60px;position:fixed;top:4%;right:4%;transform:rotate(45deg);transition:all 0.3s;background-color:transparent;}
-	button.close::after{content:"";display:block;width:4px;height:60px;background-color:#fff;position:absolute;left:50%;top:0;z-index:500;margin-left:-2px;}
-	button.close::before{content:"";display:block;width:60px;height:4px;background-color:#fff;position:absolute;top:50%;left:50%;margin-left:-30px;margin-top:-2px;}
+	button.close{width:3.125vw;height:3.125vw;position:fixed;top:0;margin-top:2vw;margin-right:2vw;right:0;transform:rotate(45deg);transition:all 0.3s;background-color:transparent;}
+	button.close::after{content:"";display:block;width:0.20833333333vw;height:3.125vw;background-color:#fff;position:absolute;left:50%;top:0;z-index:500;margin-left:-0.104166666667vw;}
+	button.close::before{content:"";display:block;width:3.125vw;height:0.2083333333vw;background-color:#fff;position:absolute;top:50%;left:50%;margin-left:-1.5625vw;margin-top:-0.2083333333vw;}
 
 
 	
@@ -50,11 +52,11 @@
 
 /*mnbLineBox----------------------------*/
 		 
-		 .mnbLogo{width:84px;height:84px;background-color:#c20c0c;float:left;background-image:url("../../img/F.png");background-repeat:no-repeat;background-position:center;}
-		 .mnbRedLine{width:3px;height:484px;background-color:#c20c0c;float:left;}
+		 .mnbLogo{width:4.375vw;height:4.375vw;background-color:#c20c0c;float:left;background-image:url("../../img/F.png");background-repeat:no-repeat;background-position:center;}
+		 .mnbRedLine{width:0.15625vw;height:25.2083333333vw;background-color:#c20c0c;float:left;}
 		 
 		 .mnbTextUl{width:inherit;height:inherit;}
-		 .mnbTextUl>li{width:100%;height:100px;background-size:60%;background-repeat:no-repeat;cursor:pointer;transition:all 0.3s;}
+		 .mnbTextUl>li{width:100%;height:5.2083333333vw;background-size:60%;background-repeat:no-repeat;cursor:pointer;transition:all 0.3s;}
 		 .mnbTextUl>li:hover{transform:scale(1.05);}
 		 .mnbTextUl>li:nth-of-type(1){background-image:url("../../img/title/menu/home.png");}
 		 .mnbTextUl>li:nth-of-type(2){background-image:url("../../img/title/menu/product.png");background-size:80%;}
@@ -63,39 +65,16 @@
 		 .mnbTextUl>li:nth-of-type(5){background-image:url("../../img/title/menu/contact.png");background-size:80%;}
 
 /*mnbUnderBox* ------------------------------------*/
-.mnbUnderBox{width:100%;height:80px;margin-top:30px;}
+.mnbUnderBox{width:100%;height:4.166666667vw;margin-top:1.5625vw;}
 .mnbUnderBox>ul{width:inherit;height:inherit;}
-.mnbUnderBox>ul>li{width:70px;height:70px;float:left;border-radius:50%;background-color:#696969;cursor:pointer;}
-.mnbUnderBox>ul>li:nth-of-type(1){margin-left:120px;}
-.mnbUnderBox>ul>li:nth-of-type(2),.mnbUnderBox>ul>li:nth-of-type(3){margin-left:38px;}
+.mnbUnderBox>ul>li{width:3.64583333333vw;height:3.64583333333vw;float:left;border-radius:50%;background-color:#696969;cursor:pointer;}
+.mnbUnderBox>ul>li:nth-of-type(1){margin-left:6.25vw}
+.mnbUnderBox>ul>li:nth-of-type(2),.mnbUnderBox>ul>li:nth-of-type(3){margin-left:1.97916666666667vw;}
 
 .mnbUnderBox i{color:#fff;text-align:center;}
-.mnbUnderBox>ul>li{font-size:36px;transition:all 0.7s;}
-.mnbUnderBox>ul>li:nth-of-type(1)>i{margin-left:24px;margin-top:16px;}
-.mnbUnderBox>ul>li:nth-of-type(2)>i{margin-left:20px;margin-top:16px;}
-.mnbUnderBox>ul>li:nth-of-type(3)>i{margin-left:20px;margin-top:14px;}
+.mnbUnderBox>ul>li{font-size:1.875vw;transition:all 0.7s;}
+.mnbUnderBox>ul>li:nth-of-type(1)>i{margin-left:1.25vw;margin-top:0.8333333vw;}
+.mnbUnderBox>ul>li:nth-of-type(2)>i{margin-left:1.041666666667vw;margin-top:0.833333333333vw;}
+.mnbUnderBox>ul>li:nth-of-type(3)>i{margin-left:1.041666666667vw;margin-top:0.7291666666667vw;}
 
 .mnbUnderBox>ul>li:hover{transform:scale(1.2);background-color:transparent;}
-
-
-	
-/*mainText_box*/
-	#mainTitleBox{width:840px;height:440px;margin-top:100px;margin-left:360px;}
-	#mainTitleBox>div{background-repeat:no-repeat;background-size:55%;}
-	.mainTitle_01{height:100px;background-image:url("../../img/title/standard.png");display:none;}
-	.mainTitle_02{width:80%;height:80px;background-image:url("../../img/title/telecaster.png");padding-left:20px;margin-left:160px;margin-top:10px;display:none;}
-	.mainTitle_03{height:100px;background-image:url("../../img/title/left_hand.png");margin-top:10px;margin-left:20px;display:none;}
-
-/*mainColor_box------------------------------------*/
-
-	#mainColorBox{width:800px;height:110px;margin-left:220px;}
-	#mainColorBox>div{width:25%;height:inherit;float:left;background-repeat:no-repeat;
-	background-position:center;transition:all 0.5s;
-	display:none;cursor:pointer;}
-	#mainColorBox>div:hover{transform:scale(1.2);}
-	#mainColorBox>div:nth-of-type(1){background-image:url("../../img/g_red.png");}
-	#mainColorBox>div:nth-of-type(2){background-image:url("../../img/g_blue.png");}
-	#mainColorBox>div:nth-of-type(3){background-image:url("../../img/g_black.png");}
-	#mainColorBox>div:nth-of-type(4){background-image:url("../../img/g_brown.png");}
-
-
