--- a/fender/fender/css/src/scroll_page_01.css
+++ b/fender/fender/css/src/scroll_page_01.css
@@ -1,26 +1,48 @@
 /* scroll_page_01.html */
 
+@media screen and (min-width: 960px) and (max-width: 2560px) {
 
-
-	#snb>ul{width:80px;height:200px;position:fixed;z-index:300;right:0;top:50%;margin-top:-100px;}
-	#snb>ul>li{width:10px;height:10px;border-radius:50%;background-color:#fff;margin-top:36px;display:none;}
+	#snb>ul{width:4.166666667vw;height:200px;position:fixed;z-index:300;right:0;top:50%;margin-top:-100px;}
+	#snb>ul>li{width:0.520833vw;height:0.520833vw;border-radius:50%;background-color:#fff;margin-top:36px;display:none;}
 	#snb>ul>li:first-child{margin-top:0;}
 	#snb>ul>li:hover{transform:scale(1.4);}
-	#snb>ul>li>a{width:10px;height:10px;display:block;}
+	#snb>ul>li>a{width:0.520833vw;height:0.520833vw;display:block;}
 
-	article{width: 100%; height:calc(100vh - 5rem);
+	article{width: 100vw; height:calc(100vh - 5rem);
 		padding-top: 5rem;}
 
 /*mainBox ----------------------------------------*/
 	#mainBox{position:relative;background-color:#171B1E;background-position:left;background-repeat:no-repeat;}
 
+
+/*mainText_box*/
+	#mainTitleBox{width:840px;height:320px;position:absolute;top:14%;left:6%;margin-left:11.458333333vw;}
+	#mainTitleBox>div{background-repeat:no-repeat;background-size:45%}
+	.mainTitle_01{height:100px;background-image:url("../../img/title/standard.png");display:none;}
+	.mainTitle_02{width:80%;height:80px;background-image:url("../../img/title/telecaster.png");padding-left:20px;margin-left:160px;margin-top:10px;display:none;}
+	.mainTitle_03{height:80px;background-image:url("../../img/title/left_hand.png");margin-top:10px;margin-left:20px;display:none;}
+
+/*mainColor_box------------------------------------*/
+
+	#mainColorBox{width:41.66666666667vw;height:3.729166666667vw;margin-left:18.4583333333vw;position:absolute;bottom:25%;}
+	#mainColorBox>div{width:8.4166667vw;height:inherit;float:left;background-repeat:no-repeat;
+	background-position:center;transition:all 0.5s;
+	display:none;cursor:pointer;background-size:contain;}
+	#mainColorBox>div:hover{transform:scale(1.2);}
+	#mainColorBox>div:nth-of-type(1){background-image:url("../../img/g_red.png");}
+	#mainColorBox>div:nth-of-type(2){background-image:url("../../img/g_blue.png");}
+	#mainColorBox>div:nth-of-type(3){background-image:url("../../img/g_black.png");}
+	#mainColorBox>div:nth-of-type(4){background-image:url("../../img/g_brown.png");}
+
+
+}
 /*bg Box ------------------------------------------*/
 	
-.bg_box{width: 50%; height: 100%; 
-	      position:fixed;right:0%;bottom:-20%; z-index: 100;display:none;}
+.bg_box{width:320px; height:830px; 
+	    position:fixed;left:58%;top:2vw; z-index: 100;display:none;}
 .bg_box>img{width: auto; position: absolute;background-size:contain;transition:0.1s;}    	
-.bg_box>img.front{height: 100%; z-index: 100;left:30%;transition:0.1s;}
-.bg_box>img.back{height: 100%; left: 50%; z-index:50;bottom:-8%;}
+.bg_box>img.front{height: 100%; z-index: 100;left:25%;transition:0.1s;}
+.bg_box>img.back{height: 100%; left: 70%; z-index:50;bottom:-8%;}
 
 
 
@@ -41,20 +63,36 @@
 		padding-top: 3rem;
 		text-shadow:0.1rem 0.1rem 0.1rem #333;
 		color:#fff;}
+/*hardware -----------------------------------*/
 
-	#footer{width: 100%; height: 7rem;
-		background-color: #ccc; 
-		box-sizing: border-box;
-		padding: 1rem;
-		padding-top:2rem;}	
+
+/*aboutBox ----------------------------------------*/
+	#hardwareBox{position:relative; background-color:rgba(0,0,0,0.5);  }
+	#hardwareBox>h2, #hardwardBox>div{margin-left:360px;}
+	
+/*aboutTitleBox ------------------------------------*/
+	#hardTitleBox{width:1270px; height:400px; margin-top:60px;background-repeat: no-repeat; 
+		background-image: url("../../img/test_1.svg"); background-size:97%;}
+	
+/*aboutTextBox ------------------------------------*/
+  #hardTextBox{width:1270px; height:230px; margin-top:60px; /*border: 1px solid #fff;*/}
+  #hardTextBox>dl{width: 350px; height: 90px; float: left; /*border: 1px solid #fff;*/ margin-right: 80px;}
+  /*#hardTextBox>dl:nth-of-type(1),#hardTextBox>dl:nth-of-type(4){margin-right: 48px;}*/
+  #hardTextBox>dl:nth-of-type(3){margin-right: 0;}
+  #hardTextBox>dl:nth-of-type(4), #hardTextBox>dl:nth-of-type(5){margin-top: 20px;}
+  #hardTextBox>dl>img{width: 50px; height: 50px; margin-right: 35px; float: left;}
+  #hardTextBox>dl>dt{color: #fff; font-size: 1.4rem; /*line-height: 3rem;*/}
+  #hardTextBox>dl>dd{margin-top: 5px; font-size: 1.2rem;  padding-left:55px; box-sizing: border-box;}
+
+
 
 
 
 /*#scrollDown---------------------------------*/
 
-#scrollDown{width:90px;height:200px;position:fixed;bottom:-10%;left:50%;margin-left:-45px;cursor:pointer;display:none;}
-#scrollDown>span{font-family:
-				'Open Sans', nanumGothic, "돋움",dotum;
+#scrollDown{width:90px;height:200px;position:fixed;bottom:-15%;left:50%;margin-left:-2.34375vw;cursor:pointer;display:none;}
+#scrollDown>span{width:6.6875vw;height:10.41666667vw;
+				font-family:'Open Sans', nanumGothic, "돋움",dotum;
 				 animation-name:scrolled;
 				 animation-timing-function:linear;
 				 animation-duration:2s;
@@ -62,9 +100,10 @@
 				 animation-iteration-count:infinite}
 
 sans-serif;color:#fff;}
-#scrollDown>ul{width:100%;height:20px;margin-left:10px;}
-#scrollDown>ul>li{width:33.333334%;
+#scrollDown>ul{width:100%;height:20px;}
+#scrollDown>ul>li{width:auto;
 				  height:20px;
+				  padding-left:14px;
 				  float:left;
 				  animation-name:triangle;
 				  animation-iteration-count:infinite;
@@ -72,15 +111,17 @@ sans-serif;color:#fff;}
 				  animation-timing-function:linear;
 				  animation-duration:1s;}
 #scrollDown>ul>li:nth-of-type(1)>i{color:#d20202;
-					font-size:24px;}
+					font-size:1.25vw;}
 #scrollDown>ul>li:nth-of-type(2)>i{color:#d20202;
-					font-size:24px;
+					font-size:1.25vw;
 					animation-delay:0.2s;}
 #scrollDown>ul>li:nth-of-type(3)>i{color:#d20202;
-					font-size:24px;
+					font-size:1.25vw;
 					animation-delay:0.5s;}
 
-@keyframes triangle{100%{transform:translateY(6px);
+@keyframes triangle{100%{transform:translateY(0.3125vw);
 					color:rgba(210,2,2,0.3);}}
 
 @keyframes scrolled{100%{color:rgba(255,255,255,0.6);}
+
+}
