--- a/fender/fender/css/src/contact.css
+++ b/fender/fender/css/src/contact.css
@@ -42,38 +42,34 @@ h1{display:block;}
 .map svg #scaBtn{cursor: pointer;}
 .map svg #headquarterBtn{cursor: pointer;}
 .map dt{width: auto;height: 1.25rem;line-height: 1.25rem;position: absolute; display: none;top:50%;left: 50%;}
-.map dt button{width: auto;height: inherit;line-height: inherit;background-color: #fff;color: #111;font-size: 1rem;text-indent: 1.25rem;box-sizing: border-box;padding-right: 1.25rem;}
-.map dd{ display: none;width: 25rem;white-space:pre-line;height: auto;position: absolute; background-color:#fff;box-sizing: border-box;padding: 1rem;top:50%;left: 50%;}
+.map dt button{width: auto;height: 1.1rem;line-height: inherit;background-color: #fff;color: #111;font-size: 1rem;text-indent: 0.5rem;box-sizing: border-box;padding-right: 0.3rem;line-height: 1.25rem}
+.map dd{ display: none;width: 20rem;white-space:pre-line;height: auto;position: absolute; background-color:#fff;box-sizing: border-box;padding: 0.6rem;top:50%;left: 50%;}
 
-dt + dd::after{content: " ";display: block;width: 1.2rem;height: 1.2rem;position: absolute;top: 0;margin-top: -0.6rem;background-color: #fff;transform: rotate(45deg);}
+dt + dd::after{content: " ";display: block;width: 1.2rem;height: 1.2rem;position: absolute;top: 0;margin-top: -0.6rem;background-color: #fff;transform: rotate(45deg);left: 2rem;}
 
 .headquarter {margin-top: -3rem;margin-left: -42rem;}
 .headquarter + dd{margin-top: 0.75rem;margin-left: -42rem;}
-.headquarter + dd::after{left: 2rem;}
+
 
 .uk {margin-top: -7rem;margin-left: -18rem;}
-.uk + dd{margin-top: -3.75rem;margin-left: -30rem;text-align: right;}
-.uk + dd::after{right: 2rem;}
+.uk + dd{margin-top: -3.75rem;margin-left: -18rem;}
 
-.eastern {margin-top: -9rem;margin-left: -24rem;}
-.eastern + dd{margin-top: -5.75rem;margin-left: -30rem;text-align: right;}
-.eastern + dd::after{right: 2rem;}
 
-.fr {margin-top: -3rem;margin-left: 2rem;}
-.fr + dd{margin-top: 1.75rem;margin-left: 2rem;}
-.fr + dd::after{left: 2rem;}
+.eastern {margin-top: -9rem;margin-left: -18rem;}
+.eastern + dd{margin-top: -5.75rem;margin-left: -18rem;}
 
-.sppt{margin-top: -4rem;margin-left: -18rem;}
-.sppt + dd{margin-top: -0.75rem;margin-left: -18rem;}
-.sppt + dd::after{left: 2rem;}
+.fr {margin-top: -3rem;margin-left: 1rem;}
+.fr + dd{margin-top: 1.75rem;margin-left: 1rem;}
+
+.sppt{margin-top: -4rem;margin-left: -15rem;}
+.sppt + dd{margin-top: -0.75rem;margin-left: -15rem;}
 
 .sca {margin-top: -8rem;margin-left:3rem;}
 .sca + dd{margin-top: -4.75rem;margin-left:3rem;}
-.sca + dd::after{left: 2rem;}
 
 .ger {margin-top: -5.5rem;margin-left: 3rem;}
 .ger + dd{margin-top: -1.25rem;margin-left: 3rem;}
-.ger + dd::after{left: 2rem;}
+
 
 .headquarterBtn{display: none;}
 .ukBtn{display: none;}
