--- a/fender/fender/css/src/scroll_page_01.css
+++ b/fender/fender/css/src/scroll_page_01.css
@@ -13,36 +13,25 @@
 
 /*mainBox ----------------------------------------*/
 	#mainBox{position:relative;background-color:#171B1E;background-position:left;background-repeat:no-repeat;}
-
+	#mainWrap{height:500px;width:580px;position:absolute;}
 
 /*mainText_box*/
-	#mainTitleBox{width:840px;height:320px;position:absolute;top:14%;left:6%;margin-left:11.458333333vw;}
-	#mainTitleBox>div{background-repeat:no-repeat;background-size:45%}
-	.mainTitle_01{height:100px;background-image:url("../../img/title/standard.png");display:none;}
-	.mainTitle_02{width:80%;height:80px;background-image:url("../../img/title/telecaster.png");padding-left:20px;margin-left:160px;margin-top:10px;display:none;}
-	.mainTitle_03{height:80px;background-image:url("../../img/title/left_hand.png");margin-top:10px;margin-left:20px;display:none;}
-
+	#mainTitleBox{width:30vw;height:18.33333333vw;position:absolute;top:20%;left:6%;margin-left:11.458333333vw;background-image:url("../../img/title/svg/main.svg");background-repeat:no-repeat;background-size:contain;background-position:center;}
+	
+	
 /*mainColor_box------------------------------------*/
-
-	#mainColorBox{width:41.66666666667vw;height:3.729166666667vw;margin-left:18.4583333333vw;position:absolute;bottom:25%;}
-	#mainColorBox>div{width:8.4166667vw;height:inherit;float:left;background-repeat:no-repeat;
-	background-position:center;transition:all 0.5s;
-	display:none;cursor:pointer;background-size:contain;}
+	#mainColorBox{width:35%;height:4rem;position:absolute;top:65%;left:10%;}
+	#mainColorBox>div{width:2.91666666vw;min-width:2rem;height:2.916666666vw;min-height:2rem;float:left;background-repeat:no-repeat;background-position:center;transition:all 0.5s;
+	display:none;cursor:pointer;background-size:contain;position:absolute;}
 	#mainColorBox>div:hover{transform:scale(1.2);}
-	#mainColorBox>div:nth-of-type(1){background-image:url("../../img/g_red.png");}
-	#mainColorBox>div:nth-of-type(2){background-image:url("../../img/g_blue.png");}
-	#mainColorBox>div:nth-of-type(3){background-image:url("../../img/g_black.png");}
-	#mainColorBox>div:nth-of-type(4){background-image:url("../../img/g_brown.png");}
-
-
+	#mainColorBox>div:nth-of-type(1){background-image:url("../../img/g_red.png");left:100%;}
+	#mainColorBox>div:nth-of-type(2){background-image:url("../../img/g_blue.png");left:75%;}
+	#mainColorBox>div:nth-of-type(3){background-image:url("../../img/g_black.png");left:50%;}
+	#mainColorBox>div:nth-of-type(4){background-image:url("../../img/g_brown.png");left:25%;}
 }
 /*bg Box ------------------------------------------*/
-	
-.bg_box{width:320px; height:830px; 
-	    position:fixed;left:58%;top:2vw; z-index: 100;display:none;}
-.bg_box>img{width: auto; position: absolute;background-size:contain;transition:0.1s;}    	
-.bg_box>img.front{height: 100%; z-index: 100;left:25%;transition:0.1s;}
-.bg_box>img.back{height: 100%; left: 70%; z-index:50;bottom:-8%;}
+img.front{height: 100%; z-index: 100;left:50%;transition:0.1s;top:10%;position:fixed;margin-left:10%;}
+img.back{height: 100%; left:50%; z-index:50;top:15%;position:fixed;margin-left:20%;}
 
 
 
@@ -131,16 +120,22 @@
 
 /*#scrollDown---------------------------------*/
 
-#scrollDown{width:90px;height:200px;position:fixed;bottom:0;left:50%;margin-left:-2.34375vw;cursor:pointer;}
+#scrollDown{width:90px;
+		 	height:200px;
+		 	position:relative;
+		 	top:0;
+		 	left:0;
+		 	cursor:pointer;
+		 	background-color:#fa0;
+		 	z-index:1000;}
 #scrollDown>span{width:6.6875vw;height:10.41666667vw;
-				font-family:'Open Sans', nanumGothic, "돋움",dotum;
+				font-family:'Open Sans', nanumGothic, "돋움",dotum,sans-serif;
+				 color:#fff;
 				 animation-name:scrolled;
 				 animation-timing-function:linear;
 				 animation-duration:2s;
 				 animation-direction:alternate;
 				 animation-iteration-count:infinite}
-
-sans-serif;color:#fff;}
 #scrollDown>ul{width:100%;height:20px;}
 #scrollDown>ul>li{width:auto;
 				  height:20px;
