--- a/portfolio/seoul_asan_hospital/public/src/scss/pc.scss
+++ b/portfolio/seoul_asan_hospital/public/src/scss/pc.scss
@@ -1,156 +1,9 @@
 //mainpage_tab.scss
 
 @import "_mixin";
+@import "pc_base";
 
 @media screen and (min-width:960px) and (max-width:2560px) {
-	#headBox{
-		@include max;
-		margin:0 auto;
-		width:960px;
-		height:74px;
-		position:relative;
-		background-color:#fff;
-	
-	&::after{		
-				@include after(-200);
-				width:100vw;
-				height:80px;
-				background-color:#fff;
-				left:50%;
-				margin-left:-50vw;} 
-			>#menu{display:none;}
-			>#home{display:none;}
-				
-		h1{min-width:120px; 
-		   min-width:230px;
-		   height:80px;
-		   left:50%;
-		   position:absolute;
-		   margin-left:-115px;
-
-			a{display:block;
-			  width:100%;
-			  height:100%;
-			  @include back("../img/src/logo_640.jpg",80%);
-
-		} // #headBox > h1 >a
-	
-		}//h1
-	}//#headBox
-	#navi{@include max;
-		width:960px;
-		height:100px;
-		background:{color:$lgc};
-		margin:0 auto;
-		display:block;
-		position:relative;
-			>ul{width:100%;height:100%;
-				>li{ position:relative;
-					&:nth-child(1){margin-left:px;}
-					font-family: 'Noto Sans KR', sans-serif;
-					font-size:18px;
-					float:left;
-					font-weight:bold;
-					color:#006869;
-					margin-top:38px;
-					margin-left:24px;
-					&:last-of-type::after{display:none}
-					&::after{@include after;
-							width:10px;
-							height:14px;
-							border-right:0.8px solid $b_font;
-							margin-left:10%;
-							bottom:20%;
-							right:0;
-							top:6px;
-							margin-right:-10px;}
-					color:$ic;}
-			}//#navi>ul
-	}//#navi
-
-	#navi::after{	
-					@include after(-100);
-
-					width:100vw;
-					height:100px;
-					background-color:$lgc;
-					left:50%;
-					top:0;
-
-					margin-left:-50vw}
-
-
-// navi_popup --------------------------------------------------
-	#navi_popup_pc{width:960px;
-				height:314px;
-				background-color:#fefbfb;
-				position:fixed;
-				top:0;
-				margin-top:174px;
-				z-index:1000;
-				left:50%;
-				margin-left:-480px;
-				@include b-set(1px);
-				display:none;
-				
-				>ul{float:left;height:100%;
-				&.pop_01{width:190px;
-						padding-left:38px;
-						padding-top:46px;
-						border: 1px solid $bc;
-						border-top:0;
-						border-bottom:0;
-
-						>li{margin-top:24px;
-							&:nth-of-type(1){margin-top:0}
-							@include font330(19px);
-							color:#4c4d4f;
-							}//li
-					}//pop_01
-				
-				&.pop_02{width:190px;
-						padding-left:52px;
-						padding-top:46px;
-						border-right: 1px solid $bc;						
-						
- 						>li{margin-top:24px;
-							&:nth-of-type(1){margin-top:0}
-							@include font330(19px);
-							color:#4c4d4f;
-							}//li
-
-					}//.pop_02
-				 &.pop_03{width:580px;
-
-				 		  padding-left:45px;
-						  padding-bottom:70px;
-						  padding-top:70px;					
-						  
-						  >li{width:220px;
-						  	  height:162px;
-						  	  float:left;
-						  	 &:nth-of-type(2){margin-left:60px;}
-						  		>img{width:80px;
-						  			height:80px;
-									margin-left:80px;}
-						  		>span{width:240px;height:auto;margin-top:12px;float:left;text-align:center;
-						  			@include font330(22px);}
-						  		>p{width:240px;
-						  		   height:auto;
-						  		   float:left;
-						  		   text-align:center;
-						  		   @include font310(18px);
-						  		   padding-top:10px;}
-						  		}//li
-					 		
-
-						}//pop_03
-
-				}//ul
-
-			}//#nai_popup_pc
-
-#navi_accordion{display:none;}
 
 // #addBanner_01----------------------------------------------------
 	#Banner{width:960px;height:400px;margin:0 auto;position:relative;}
@@ -725,84 +578,6 @@
 
 
 
-// #footPopup_site ----------------------------------------------
-
-#footPopup_site{display:none;
-			  width:960px;
-			  height:400px;
-			  background-color:#fefbfb;
-			  position:absolute;
-			  bottom:320px;
-			  z-index:300;
-			  border: 2px solid $bc;
-			  border-radius:10px; 
-
-			>button{width:50px;
-					height:50px;
-					background-color:#6b989a;
-					position:absolute;
-					bottom:0;
-					left:50%;
-					margin-left:-30px;
-					font-size:40px;
-					line-height:1.5;
-					border-radius:2px;
-					>i{transition:all 0.3s}
-					&:hover i{transform:scale(1.3);}
-					}
-
-			>ul{width:960px;
-				&.popup_title{padding-left:24px;
-							  padding-top:40px;
-							  padding-bottom:20px;
-					   		  height:100px;
-								
-								>li{float:left;
-									margin-left:22px;
-									transition:all 0.3s;
-									@include font330(22px);
-									color:#006869;
-									&:nth-of-type(1){margin-left:0;font-weight:bold;}
-									&:nth-of-type(1):after{display:block}
-									&:hover{@include font330(26px);}
-									&:hover::after{display:block}
-									&::after{display:none;
-											 content:"";
-											 width:inhreit;
-											 height:2px;
-											 background-color:rgba(179,214,210,0.8);margin-top:10px;
-											 transition:all 0.7s;}
-									}//li
-								
-								}//.popup_title
-					
-					&.popup_text{padding-left:4px;
-								>li{width:104px;
-									height:250px;
-									float:left;
-									margin-left:12px;
-									&:last-child{padding-left:16px;}
-									>a{ &:nth-of-type(1){margin-top:0}
-										&:hover{transform:scale(1.1);}
-										transition:all 0.3s;
-									   margin-top:10px;
-									   @include font330(16px);
-									   display:block;
-									   width:auto;
-									   height:auto;
-
-
-									}//&.popup_text>li>a
-
-									}//&.popup_text>li
-
-
-								}//.popup_text
-					}//ul
-
-				}//foot_popup_02
-
-// foot_popup_02 -----------------------------------------------
 
 
 }//media screen
