--- a/portfolio/seoul_asan_hospital/public/src/scss/tab.scss
+++ b/portfolio/seoul_asan_hospital/public/src/scss/tab.scss
@@ -1,126 +1,8 @@
 //mainpage_tab.scss
-
+@import "tab_base";
 @import "_mixin";
 
 @media screen and (min-width:640px) and (max-width:959px) {
-	#headBox{
-		width:100%;
-		height:80px;
-		background:{color:#fff}
-		h1{min-width:120px;
-		   width:33.3333333vw;
-		   height:80px;
-		   left:50%;
-		   position:absolute;
-		   margin-left:-16.6666666vw;
-
-			a{display:block;
-			  width:100%;
-			  height:100%;
-			  @include back("../img/src/logo_640.jpg",70%);}
-		}
-
-		#menu{width:34px;
-			  height:24px;
-			  background-color:transparent;
-			  float:left;
-			  margin-left:2.7777778vw;
-			  margin-top:20px;
-			   
-			  i{
-			  	font-size:40px;
-			  	color:$ic;
-			  	transition:all 0.3s;
-			  	&:hover{transform:scale(1.2)}
-			  }
-			}
-		#home{width:34px;
-			  height:24px;
-			  background-color:transparent;
-			  margin-right:2.7777778vw;
-			  margin-top:20px;
-			  float:right;
-			
-			  i{
-			  	font-size:40px;
-			  	color:$ic;
-			  	transition:all 0.3s;
-			  	&:hover{transform:scale(1.2)}
-			  }
-			}
-	}
-	#navi,#navi_popup_pc{display:none;}
-
-
-// #navi_accordion ----------------------------------------------
-	#navi_accordion{position:absolute;
-					width:46vw;
-					height:auto;
-					background-color:#fdfefe;
-					left:0;
-					top:0;
-					margin-top:80px;
-					z-index:500;
-					border:2px solid #b6d7d4;
-					display:none;
-					>h2{width:100%;
-						height:8.125vw;
-						color:#f68b1f;
-						padding-top:1.25vw;
-						padding-left:5.625vw;
-						font-size:2.8125vw;
-						@include font330(3.125vw);
-						>i{font-size:4.375vw;
-						   margin-top:0.3125vw;
-						   margin-right:1.5625vw;
-						   float:left;
-						   transition:all 0.3s;
-						   &:hover{color:#f68b1f;}
-							}
-						>span{float:left;
-							  padding-top:0.625vw;
-							  padding-left:1.5625vw;
-							  text-align:center;}
-						}//h2
-					dt{ width:100%;
-						height:8.125vw;
-						border-top:1px solid #b6d7d4;
-						border-bottom:1px solid #b6d7d4;
-						float:left;
-						text-align:left;
-						padding-left:5vw;
-						padding-top:2.1875vw;
-						@include font330(3.125vw);
-						color:$b_font;
-						transition:all 0.5s;
-						&:hover{background-color:$b_font;color:#fff}
-						cursor:pointer;}
-					dd{width:100%;
-					   height:auto;
-					   display:none;
-					   cursor:pointer;
-					   >ul{&:nth-of-type(1){width:55%;}
-					  	   &:nth-of-type(2){width:45%;}
-					   	   height:auto;
-					   	   float:left;
-					   	   text-align:left;
-						   &:nth-of-type(2){display:none}					   	   	   	  
-					   	   >li{@include font330(2.3vw);
-					   	   	   padding-left:6.25vw;	
-					   	   	   color:$b_font;
-					   	   	   width:100%;
-					   	   	   height:6.25vw;
-					   	   	   line-height:2.4;
-					   	   	   border-right:solid 2px #b6d7d4;
-					   	   	   transition:all 0.5s;
-							   &:hover{background-color:$b_font;color:#fff;}
-									
-					   	   		}//li
-
-					   	   }
-					   }
-
-				}//navi_accordion
 
 
 
@@ -420,67 +302,3 @@
 			}//li
 	}//ul
 	}// #articleTab
-	
-	#footBox{transition:all 0.3s;
-		width:100%;
-		min-height:180px;
-		height:28.125vw;
-		background:{color:#fff};
-		.snb{
-			width:100%;
-			min-height:60px;
-			height:9.375vw;
-			background-color:$ef;
-			.snb_for_pc{display:none};
-			>.snb_for_mini{width:inherit;
-						   height:inherit;
-						   padding-top:1.555555vw;padding-left:14.4444445vw;
-						>li{float:left;
-							@include font330(4.22222vw);
-							&:nth-of-type(1){}
-							&:nth-of-type(2){color:#f68b1f;margin-left:8.444444vw;}
-							&:nth-of-type(3){margin-left:8.444444vw;}
-							>i{color:#f68b1f;padding-right:2.222222vw;}
-						}//li
-				}//.snb_for_mini				
-
-
-		}//.snb
-		
-		.fnb{>.fnb_for_mini{display:none;}
-			 >.fnb_for_pc{>.medals{display:none;}
-							}
-.footQuick{	transition:all 0.3s;
-			width:100vw;
-			height:6.25vw;
-			text-align:center;
-			ul{width:inherit;
-			   height:inherit;
-			   &.first_line{padding-left:2.1875vw;padding-top:3.125vw;}
-			   &.second_line{display:none;}
-			   >li{ @include font330(2.2vw);
-					   		 color:$b_font;
-					   		 float:left;
-					   	   	 margin-left:24px;}//li
-				}//ul
-
-		
-			}//.footQuick
-.address{		  transition:all 0.3s;
-				  @include font330(17px);
-				  color:$blc;
-				  width:100%;
-				  height:18.75vw;
-				  padding-top:2.1875vw;
-				  text-align:center;
-				  line-height:1.6;
-		 }//address		
-		}//.fnb
-	
-	} // #footBox 
-// footPopup_for_pc --------------------------------------------
-
-#footPopup_site{display:none;}
-#footPopup_allMenu{display:none;}
-	
-}//media screen  
