16-11-23 서울아산병원 second페이지 작업

--- a/portfolio/seoul_asan_hospital/public/src/scss/mob.scss
+++ b/portfolio/seoul_asan_hospital/public/src/scss/mob.scss
@@ -295,8 +295,10 @@
 				}//span
 				p{width:63.333333vw;@include font330(3.9777778vw);float:left;padding-left:60px;color:#efefef;}
 				a{display:block;float:right;padding-top:30px;float:right;@include font310(2.899999vw);color:#efefef;padding-right:10px}
-			}//li
-	}//ul
-}//articleTab
+				}//li
+			}//ul
+		}//articleTab
+
+	}//content_04
 
 }
