--- a/portfolio/seoul_asan_hospital/public/src/scss/mob_base.scss
+++ b/portfolio/seoul_asan_hospital/public/src/scss/mob_base.scss
@@ -125,7 +125,6 @@
 				}//navi_accordion
 	
 
-}
 	
 	#footBox{
 		width:100%;
@@ -155,7 +154,7 @@
 					 text-align:center;
 					 padding-top:20px;
 					>li:nth-of-type(2){padding-top:16px;}
-					}
+					}//.fnb_for_mini
 	}//footBox
 	#footPopup_site{display:none;}
     #footPopup_allMenu{display:none;}
