--- a/portfolio/seoul_asan_hospital/public/src/scss/_mixin.scss
+++ b/portfolio/seoul_asan_hospital/public/src/scss/_mixin.scss
@@ -21,6 +21,11 @@ $pc:960;
 		{
 			border:{top:$size solid $borderColor;bottom:$size solid $borderColor;}
 		}
+@mixin b-all($size:2px,$borderColor:$bc)
+		{
+			border:{top:$size solid $borderColor;left:$size solid $borderColor;right:$size solid $borderColor;bottom:$size solid $borderColor;}
+		}
+
 @mixin rounded($i){
 	-webkit-border-radius:$i;
 	-moz-border-radius:$i;
