--- a/portfolio/seoul_asan_hospital/public/src/scss/tab.scss
+++ b/portfolio/seoul_asan_hospital/public/src/scss/tab.scss
@@ -282,7 +282,6 @@
 		min-height:240px;
 		height:37.5vw;
 		background:{color:$blc};
-		
 		ul{width:100%;height:100%;
 			>li{width:100%;
 				height:33.333334%;
@@ -290,7 +289,8 @@
 				padding-top:12px;
 				span{width:52px;
 					height:52px;
-					background-color:#fff;float:left;
+					background-color:#fff;
+					float:left;
 					margin-left:30px;
 				&.artTab_icon_01{@include back("../img/src/awards.png",100%);}	
 				&.artTab_icon_02{@include back("../img/src/earth.png",100%);}
@@ -301,4 +301,6 @@
 				a{display:block;float:right;padding-top:30px;float:right;@include font310(2.899999vw);color:#efefef;padding-right:6.25vw}
 			}//li
 	}//ul
-	}// #articleTab
+}// #articleTab
+
+}
