--- a/fender/fender/css/src/base.css
+++ b/fender/fender/css/src/base.css
@@ -5,10 +5,10 @@
 /* header ----------------------------------------*/
 
 
-body{overflow-x: hidden;}
-.content{width: 100%; height: auto;}
-	#headBox{width: 100%; height: 4.16666666667vw; box-sizing:border-box; position: fixed;z-index:500;top:0; left: 0;}
-	#headBox.fix{position: fixed; top: 0}
+body{overflow-x: hidden;overflow-y:hidden;}
+.content{width: 100%; height: auto; position:relative;}
+	
+	#headBox{width: 100%; height: 4.16666666667vw; box-sizing:border-box; position:absolute;z-index:500;top:0; left: 0;}
 
 	h1{width:8.54166667vw; height:64px;float: left;background-image:url("../../img/fender_logo.png");background-size:100%;background-repeat:no-repeat;background-position:center;margin-top:30px;margin-left:3.33333333vw;display:none;}
 
